product-feat-36: nested category 기능 추가
